--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
-    "dev": "\"npm run server\"\"npm run client\""
+    "dev": "\"npm run server\"\"npm run client\"",
+    "data:import":"node backend/seeders",
+    "data:destroy":"node backend/seeders"
+
   },
   "repository": {
     "type": "git",
