--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
-    "server": "nodemon backend/server",
+    "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "\"npm run server\"\"npm run client\"",
     "data:import": "node backend/seeders",
