--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.12"
   }
 }
